--- a/docs/notification-system.mdx
+++ b/docs/notification-system.mdx
@@ -101,7 +101,6 @@ User notification preferences are stored in the database with the following stru
 ```json
 {
   "notification_preferences": {
-    "issues": true,
     "reviewer_review_requested": true,
     "reviewer_commented": true,
     "reviewer_merged": true,
@@ -112,8 +111,7 @@ User notification preferences are stored in the database with the following stru
     "author_check_failed": true,
     "author_check_succeeded": true,
     "mute_own_activity": true,
-    "mute_bot_comments": true,
-    "group_similar": true
+    "mute_bot_comments": true
   },
   "notification_schedule": {
     "digest_enabled": false,
